@@ -12809,6 +12809,33 @@ if|if
 condition|(
 name|crtTbl
 operator|.
+name|getTblProps
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|tbl
+operator|.
+name|getTTable
+argument_list|()
+operator|.
+name|getParameters
+argument_list|()
+operator|.
+name|putAll
+argument_list|(
+name|crtTbl
+operator|.
+name|getTblProps
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|crtTbl
+operator|.
 name|getPartCols
 argument_list|()
 operator|!=
@@ -13125,33 +13152,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-if|if
-condition|(
-name|crtTbl
-operator|.
-name|getTblProps
-argument_list|()
-operator|!=
-literal|null
-condition|)
-block|{
-name|tbl
-operator|.
-name|getTTable
-argument_list|()
-operator|.
-name|getParameters
-argument_list|()
-operator|.
-name|putAll
-argument_list|(
-name|crtTbl
-operator|.
-name|getTblProps
-argument_list|()
-argument_list|)
-expr_stmt|;
 block|}
 comment|/*      * We use LazySimpleSerDe by default.      *      * If the user didn't specify a SerDe, and any of the columns are not simple      * types, we will have to use DynamicSerDe instead.      */
 if|if
