@@ -295,6 +295,24 @@ name|hadoop
 operator|.
 name|hive
 operator|.
+name|conf
+operator|.
+name|HiveConf
+operator|.
+name|ConfVars
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
 name|metastore
 operator|.
 name|api
@@ -40356,6 +40374,159 @@ name|getRR
 argument_list|()
 return|;
 block|}
+comment|/**    * Add default properties for table property. If a default parameter exists    * in the tblProp, the value in tblProp will be kept.    * @param table property map    * @return Modified table property map    */
+specifier|private
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|addDefaultProperties
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|tblProp
+parameter_list|)
+block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|retValue
+decl_stmt|;
+if|if
+condition|(
+name|tblProp
+operator|==
+literal|null
+condition|)
+block|{
+name|retValue
+operator|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|retValue
+operator|=
+name|tblProp
+expr_stmt|;
+block|}
+name|String
+name|paraString
+init|=
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|ConfVars
+operator|.
+name|NEWTABLEDEFAULTPARA
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|paraString
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|paraString
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+for|for
+control|(
+name|String
+name|keyValuePair
+range|:
+name|paraString
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+control|)
+block|{
+name|String
+index|[]
+name|keyValue
+init|=
+name|keyValuePair
+operator|.
+name|split
+argument_list|(
+literal|"="
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|keyValue
+operator|.
+name|length
+operator|!=
+literal|2
+condition|)
+block|{
+continue|continue;
+block|}
+if|if
+condition|(
+operator|!
+name|retValue
+operator|.
+name|containsKey
+argument_list|(
+name|keyValue
+index|[
+literal|0
+index|]
+argument_list|)
+condition|)
+block|{
+name|retValue
+operator|.
+name|put
+argument_list|(
+name|keyValue
+index|[
+literal|0
+index|]
+argument_list|,
+name|keyValue
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+return|return
+name|retValue
+return|;
+block|}
 comment|/**    * Analyze the create table command. If it is a regular create-table or    * create-table-like statements, we create a DDLWork and return true. If it is    * a create-table-as-select, we get the necessary info such as the SerDe and    * Storage Format and put it in QB, and return false, indicating the rest of    * the semantic analyzer need to deal with the select statement with respect    * to the SerDe and Storage Format.    */
 specifier|private
 name|ASTNode
@@ -41254,6 +41425,13 @@ case|case
 name|CREATE_TABLE
 case|:
 comment|// REGULAR CREATE TABLE DDL
+name|tblProps
+operator|=
+name|addDefaultProperties
+argument_list|(
+name|tblProps
+argument_list|)
+expr_stmt|;
 name|crtTblDesc
 operator|=
 operator|new
@@ -41454,6 +41632,13 @@ name|e
 argument_list|)
 throw|;
 block|}
+name|tblProps
+operator|=
+name|addDefaultProperties
+argument_list|(
+name|tblProps
+argument_list|)
+expr_stmt|;
 name|crtTblDesc
 operator|=
 operator|new
